--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite": "^6.1.0"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/vite": "^4.0.6"
   }
 }
