--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
-    "@tailwindcss/vite": "^4.0.6"
+    "@tailwindcss/vite": "^4.0.6",
+    "svelte-routing": "^2.13.0"
   }
 }
